UPDATED: PART 3 DONE

--- a/src/classes/ProjectController.cls
+++ b/src/classes/ProjectController.cls
@@ -1,7 +1,5 @@
-
 public with sharing class ProjectController {
-	public ProjectController() {
-	}
+
 	@AuraEnabled
 	public static List<Project__c> getProjects() {
 	   return [Select Id, Name, Description__c, Status__c,
@@ -15,5 +13,22 @@ public with sharing class ProjectController {
 	@AuraEnabled
 	public static Test_Case__c upsertTestCase(Test_Case__c item) {
 	upsert item;
+	return item;
 	}
+	@AuraEnabled
+ 	public static List<Testcase_Step__c> getSteps(String recordId) {
+ 		 return [Select Id, Name, Description__c, Expected_result__c
+ 		 From Testcase_Step__c Where Test_Case__r.Id =: recordId];
+ 	}
+	@AuraEnabled
+ 	public static String getOrder(String recordId){
+		Test_Case__c item=[Select Id, order_step__c From Test_Case__c Where Test_Case__c.Id =: recordId limit 1];
+		return item.order_step__c;
+	}
+	@AuraEnabled
+	public static void setStepOrder(String recordId, String order){
+		Test_Case__c item= [Select Id From Test_Case__c Where Test_Case__c.Id =: recordId limit 1];
+		item.order_step__c=order;
+		upsert item;
+	 	}
 }
